--- a/bechdel.Rmd
+++ b/bechdel.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Bechdel"
-author: "YOU"
+author: "Julie Garrison"
 date: "`r Sys.Date()`"
 output: 
   html_document: 
@@ -19,11 +19,11 @@ library(fivethirtyeight)
 library(tidyverse)
 ```
 
-The dataset contains information on `r nrow(bechdel)` movies released between `r min(bechdel$year)` and `r max(bechdel$year)`. However we'll focus our analysis on movies released between 1990 and 2013.
+The dataset contains information on `r nrow(bechdel)` movies released between `r min(bechdel$year)` and `r max(bechdel$year)`. However we'll focus our analysis on movies released between 2000 and 2013.
 
 ```{r}
-bechdel90_13 <- bechdel %>% 
-  filter(between(year, 1990, 2013))
+bechdel00_13 <- bechdel %>% 
+  filter(between(year, 2000, 2013))
 ```
 
 There are ---- such movies.
@@ -41,7 +41,7 @@ And we'll also use the `binary` and `test_clean` variables for grouping.
 Let's take a look at how median budget and gross vary by whether the movie passed the Bechdel test.
 
 ```{r}
-bechdel90_13 %>%
+bechdel00_13 %>%
   group_by(binary) %>%
   summarise(med_budget = median(budget_2013),
             med_domgross = median(domgross_2013, na.rm = TRUE),
@@ -51,7 +51,7 @@ bechdel90_13 %>%
 Next, let's take a look at how median budget and gross vary by a more detailed indicator of the Bechdel test result (`ok` = passes test, `dubious`, `men` = women only talk about men, `notalk` = women don't talk to each other, `nowomen` = fewer than two women).
 
 ```{r}
-bechdel90_13 %>%
+bechdel00_13 %>%
   # ____ %>%
   summarise(med_budget = median(budget_2013),
             med_domgross = median(domgross_2013, na.rm = TRUE),
@@ -61,14 +61,14 @@ bechdel90_13 %>%
 In order to evaluate how return on investment varies among movies that pass and fail the Bechdel test, we'll  first create a new variable called `roi` as the ratio of the gross to budget.
 
 ```{r}
-bechdel90_13 <- bechdel90_13 %>%
+bechdel00_13 <- bechdel00_13 %>%
   mutate(roi = intgross_2013 / domgross_2013)
 ```
 
 Let's see which movies have the highest return on investment.
 
 ```{r}
-bechdel90_13 %>%
+bechdel00_13 %>%
   arrange(desc(roi)) %>% 
   select(title, clean_test, binary, roi, budget_2013, intgross_2013)
 ```
@@ -76,7 +76,7 @@ bechdel90_13 %>%
 Below is a visualization of the return on investment by test result, however it's difficult to see the distributions due to a few extreme observations.
 
 ```{r}
-ggplot(data = bechdel90_13, mapping = aes(x = clean_test, y = roi, color = binary)) +
+ggplot(data = bechdel00_13, mapping = aes(x = clean_test, y = roi, color = binary)) +
   geom_boxplot() +
   labs(title = "Return on investment vs. Bechdel test result",
        x = "Detailed Bechdel result",
@@ -87,7 +87,7 @@ ggplot(data = bechdel90_13, mapping = aes(x = clean_test, y = roi, color = binar
 Zooming in on the movies with `roi < 10` provides a better view of how the medians across the categories compare:
 
 ```{r}
-ggplot(data = bechdel90_13, mapping = aes(x = clean_test, y = roi, color = binary)) +
+ggplot(data = bechdel00_13, mapping = aes(x = clean_test, y = roi, color = binary)) +
   geom_boxplot() +
   ylim(0, 10) +
   labs(title = "Return on investment vs. Bechdel test result",
